--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 streamlit = "^1.37.0"
 langchain = "^0.2.11"
 langchain-openai = "^0.1.19"
+fpdf = "^1.7.2"
+pymupdf = "^1.26.3"
 
 
 [build-system]
