--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "002-occupation-forecast"
+name = "001-triage-preconsulta"
 version = "0.1.0"
 description = ""
 authors = ["Borja Lozano <borja.lozano@babelgroup.com>"]
